css/main.css
html { 
  background: url(../Images/background.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  font-family: 'Helvetica Neue', sans-sarif;
  background-color: black;
}

.nav-bar{
	color: white;
}

.nav-bar{
    background rgba: (0,0,0,0);
    overflow: hidden;
    position: fixed;
    width: 100%;
    top: 0;
    text-decoration: none;
}

.nav-bar a {
    float: left;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.nav-bar a:hover {
    background-color: white;
    color: black;
}

.nav-bar a.active {
    background-color: #4CAF50;
    color: white;
}

.profile-box{
	width: 400px;
	height: 600px;
	background: rgba(0,0,0,0.3);
	padding: 35px;
	color: white;
	margin: 0 auto;
	margin-top: 40px;
	text-align: center;
	overflow: hidden;
	overflow: scroll;
	}

.profile-pic{
	border-radius: 50%;
	height: 200px;
	width: 200px;
}

h1{
	font-weight: 100;
	letter-spacing: 6;
	font-size: 40px;
}

p{
	font-weight: 200;
	letter-spacing: 1;
}

.social-icons{
	font-size: 40px;
}

.social-icons a{
	color: white;
}

.line-break{
	width: 300px;
	margin: 0 auto;
	border-top: 1px solid white;
}

.course-work{
	text-align: left;
}

.social-icons a:hover{
	color: blue;
}

a:visited{
	color: white;
}

.footer{
	color: white;
}

